# fozziejoin

./: .Rbuildignore  .gitignore  Cargo.toml  DESCRIPTION  LICENSE  LICENSE.md  Makefile  NAMESPACE  NEWS.md  README.md  ]
.github/workflows/: R-CMD-check.yaml  run_r_benches.yml  run_rbase_benches.yml
R/: extendr-wrappers.R  fozzie_interval_join.R  fozzie_regex_join.R  fozzie_string_join.R  fozzie_temporal_join.R  rutils.R
benchmarks/: Makefile  plotbench.R
benchmarks/python/: Makefile  bench_string.py
benchmarks/r/: cran_checks.R  difference_benchmark.R  plotbench.R  (+3 more)
data-raw/: test_data.R
datasets/: misspellings.csv
fozziejoin-core/: Cargo.toml
fozziejoin-core/src/: lib.rs  utils.rs
fozziejoin-core/src/join/: anti.rs  full.rs  inner.rs  left.rs  mod.rs  right.rs  semi.rs  utils.rs
fozziejoin-core/src/stringdist/: cosine.rs  damerau_levenshtein.rs  hamming.rs  jaccard.rs  jaro_winkler.rs  lcs.rs  levenshtein.rs  mod.rs  osa.rs  qgram.rs  string_dist_method.rs  utils.rs
fozziejoin-core/src/tests/: jaccard.rs
fozziejoin-py/: Cargo.toml  Makefile  README.md  pyproject.toml  test.py
fozziejoin-py/.github/workflows/: CI.yml
fozziejoin-py/fozziejoin/: __init__.py  core.py
fozziejoin-py/src/: lib.rs
fozziejoin-py/tests/: test_fozzie_string_join.py  test_string_distance_join.py
fozziejoin-r/: .Rbuildignore  .gitignore  CODE_OF_CONDUCT.md  DESCRIPTION  LICENSE.note  NAMESPACE  NEWS.md  README.md  cran-comments.md
fozziejoin-r/src/rust/: Cargo.toml
fozziejoin-r/src/rust/src/: lib.rs
fozziejoin-r/src/rust/src/difference/: mod.rs
fozziejoin-r/src/rust/src/interval/: real.rs
fozziejoin-r/src/rust/src/merge/: full.rs  inner.rs  right.rs
fozziejoin-r/src/rust/src/regex/: mod.rs
fozziejoin-r/src/rust/src/string/: jaro_winkler.rs  mod.rs
fozziejoin-r/src/rust/src/string/edit/: damerau_levenshtein.rs  hamming.rs
fozziejoin-r/src/rust/src/string/ngram/: cosine.rs  jaccard.rs
man/: fozzie_distance_join_family.Rd  fozzie_interval_join_family.Rd  fozzie_regex_join_family.Rd  fozzie_temporal_interval_join_family.Rd  fozzie_temporal_join_family.Rd  fozziejoin-package.Rd  get_nthread_default.Rd  normalize_by.Rd
src/: Makevars  entrypoint.c  fozziejoin-win.def
tests/: testthat.R
vignettes/: overview.Rmd  string_dist_benchmarking.Rmd
(+82 files in other folders)
