[package]
name = "fozziejoin-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "fozziejoin_core"
crate-type = ["lib"]

[dependencies]
anyhow = "1.0.100"
log = "0.4.28"
polars = "0.51.0"
rayon = "1.11.0"
rustc-hash = "2.1.1"
