[package]
name = "fozziejoin_py"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "fozziejoin"
crate-type = ["cdylib"]

[dependencies]
fozziejoin-core = { path = "../fozziejoin-core"}
anyhow = "1.0.100"
polars = "0.51.0"
pyo3 = {version = "0.25.0", features = ["extension-module"]}
pyo3-polars = "0.24.0"
rayon = "1.11.0"
rustc-hash = "2.1.1"
