[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"

[project]
name = "fozziejoin"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = [
    "polars>=1.34",
    "pyarrow>=21.0.0",
]

[tool.maturin]
features = ["pyo3/extension-module"]

[project.optional-dependencies]
dev = ["pytest>=7.0.0"]
