[workspace]
resolver = '2'

[package]
name = 'fozziejoin'
publish = false
version = '0.1.0'
edition = '2021'
rust-version = '1.81'

[lib]
crate-type = ['staticlib', 'lib']
name = 'fozziejoin'

[dependencies]
anyhow = "1.0.100"
extendr-api = "0.8.1"
interavl = "0.3.0"
itertools = "0.14.0"
ordered-float = "5.1.0"
rapidfuzz = "0.5.0"
rayon = "1.10.0"
regex = "1.11.3"
rustc-hash = "2.1.1"
textdistance = "1.1.1"
